Hexen II: Hammer of Thyrion

Development Progress	:
---------------------------

2011-07-25 (SVN):
    * libs/common/q_stdinc.h: Moved stdio.h include before q_stdint.h.

2011-07-25 (SVN):
    * utils, cmdlib.c (GetTime): Replaced time() by platform specific
      code.

2011-07-25 (SVN):
    * sys_unix.c, sys_win.c, sys_dos.c: Added Sys_DateTimeString() as a
      new helper procedure to get date/time in the "MM/DD/YYYY HH:MM:SS"
      format.
    * debuglog.c, host_cmd.c: Replaced the time() and strftime() calls by
      Sys_DateTimeString().

2011-07-25 (SVN):
    * hexen2/server/sys_win.c, hexenworld/server/sys_win.c: Replaced most
      of the crt calls, including conio code, by windows api calls. Clean
      up and tidy up.

2011-07-25 (SVN):
    * utils/common/cmdlib.c, util_io.c: Removed commented out code.

2011-07-25 (SVN):
    * h2patch/h2patch3.c: For DOS, replace gettimeofday() by uclock().

2011-07-25 (SVN):
    * sys_dos.c: Added information about uclock() extracted from DJGPP
      manual pages.

2011-07-25 (SVN):
    * hexen2/sys_win.c, hexenworld/client/sys_win.c: Replaced most of the
      crt calls by windows api calls. Clean up and tidy up.

2011-07-25 (SVN):
    * sys_win.c: Removed commented out macro.

2011-07-25 (SVN):
    * h2patch/h2patch3.c: Minor cleanup for Sys_unlink() and Sys_rename().

2011-07-25 (SVN):
    * zone.c: Renamed the memblock_t and zonelist_t id members to magic
      for better readability. Renamed zonelist_t idx member to id.

2011-07-20 (SVN):
    * hexenworld/server/pr_edict.c: Fixed segmentation fault in case of
      bad pointer in NUM_FOR_EDICT().  Removed extra title prints from
      ED_PrintEdict_f() and ED_PrintEdicts().

2011-07-20 (SVN):
    * Bumped beta version date to 2011-07-20 .
    * hexen2/Makefile: Allowed ogg/vorbis for dos builds. For now I am
      using tremor for dos, but it also builds and runs perfectly fine
      with libvorbis too. The DOS build define CODECS_USE_ZONE which is